[package]
name = "stonemq"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
repository = "https://github.com/jonefeewang/stonemq"
authors = ["jonefeewang<jonefeewang@gmail.com>"]
description = "A high performance and efficient message queue written in Rust."
keywords = ["kafka", "pulsar"]
categories = ["network-programming"]
license = "Apache-2.0"


[dependencies]
# tokio
tokio = { version = "1.33", features = [
    "rt",
    "time",
    "net",
    "io-util",
    "macros",
    "signal",
    "rt-multi-thread",
    "tracing",
    "test-util",

] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7", features = ["time"] }
bytes = { version = "1", features = ["serde"] }

# common dependencies
num_cpus = "1.16"
thiserror = "1.0.49"
config = "0.14"
clap = { version = "4.4", features = ["derive"] }
rocksdb = "0.22.0"
serde = { version = "1.0.188", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.1.2", features = ["v4"] }
rand = "0.8.5"
integer-encoding = "4.0.0"
crc32c = "0.6.5"
memmap2 = "0.9.4"
dotenv = "0.15.0"

# concurrency lib
dashmap = "6.0.0"
parking_lot = "0.12.3"
async-channel = "2.3"

# tracing and metrics
tracing = { version = "0.1", features = ["log"] }
tracing-core = "0.1.28"
tracing-appender = "0.2"
console-subscriber = "0.1.5"
tracing-opentelemetry = "=0.24.0"
opentelemetry = { version = "0.23", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.23", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
opentelemetry-stdout = { version = "0.4.0", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.16", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.15"
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "registry",
    "std",
    "fmt",
    "chrono",
    "env-filter",
    "ansi",
    "tracing-log",
] }

[dev-dependencies]
tempfile = "3"
rstest = "0.22.0"

[[bin]]
name = "stonemq"
path = "src/bin/stonemq.rs"

[[bin]]
name = "log-parser"
path = "src/bin/log_parser.rs"


[profile.release]
debug = true

[profile.dev]
debug = true
